# vrc-eac-emulator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SETUP_GUIDE.md  SETUP_GUIDE_WSL.md  TUTORIAL.md
dependencies/: CMakeLists.txt
dependencies/crashlog/: CMakeLists.txt
dependencies/libhv/: CMakeLists.txt
dependencies/minhook/: CMakeLists.txt
dependencies/plog/: CMakeLists.txt
includes/: Utils.cpp  Utils.h  constants.h  nullable_string.h  sig.hpp  socket.cpp  socket.h  socks.cpp  socks.h  utils.cpp  utils.h  vlock.h
includes/api/: json_helper.h  request.h  response.h  session_factory.h  session_id.h
includes/api/requests/: id2string_request.cpp  id2string_request.h  login_request.cpp  login_request.h  login_status_request.cpp  login_status_request.h
includes/api/response/: id2string_response.cpp  id2string_response.h  login_response.cpp  login_response.h  login_status_response.cpp  login_status_response.h
includes/eos/: eos_anticheat_types.h  eos_api.h  eos_general_types.h  eos_login_types.h  eos_platform_types.h
includes/protocol/: packet.h  packet_codec.cpp  packet_factory.cpp  packet_factory.h  packet_id.h
includes/protocol/packets/: begin_session_packet.cpp  begin_session_packet.h  end_session_packet.cpp  end_session_packet.h  handshake_packet.cpp  handshake_packet.h  initialize_eos_packet.h  notify_message_to_server_packet.cpp  notify_message_to_server_packet.h  receive_message_packet.cpp  receive_message_packet.h  request_login_packet.h
includes/protocol/packets/c2s/: create_platform_packet.cpp  create_platform_packet.h  request_id2string_packet.cpp  request_id2string_packet.h  request_login_packet.cpp  request_login_packet.h
includes/protocol/packets/s2c/: response_id2string_packet.cpp  response_id2string_packet.h  response_login_packet.cpp  response_login_packet.h
includes/protocol/stream/: buffer.h  read_stream.h  write_stream.h
linux/: CMakeLists.txt  dllmain.cpp  server.cpp  server.h  server_packet_handler.cpp  server_packet_handler.h
linux/api/: api_handler_registry.h  api_handlers.h  id2string_handler.cpp  id2string_handler.h  login_handler.cpp  login_handler.h  login_status_handler.cpp  login_status_handler.h
linux/eos/: eos.cpp  eos.h  eos_anticheat.cpp  eos_anticheat.h  eos_connect.cpp  eos_connect.h  eos_logger.h  eos_platform.cpp  eos_platform.h  eos_utils.h
linux/forwarding/: exports.cpp  exports.def  forwarder.cpp
linux/handlers/: create_platform_handler.cpp  handler_registry.h  request_login_handler.cpp  request_login_handler.h
linux/handlers/anticheat/: begin_session_handler.cpp  begin_session_handler.h  end_session_handler.cpp  end_session_handler.h  receive_message_handler.cpp  receive_message_handler.h
linux/handlers/common/: handshake_packet_handler.cpp  handshake_packet_handler.h  initialize_eos_handler.cpp  initialize_eos_handler.h  request_id2string_handler.cpp  request_id2string_handler.h
linux/handlers/notification/: notify_message_to_server_handler.cpp  notify_message_to_server_handler.h
linux/handlers/platform/: begin_session_handler.cpp  create_platform_handler.cpp  create_platform_handler.h  request_login_handler.cpp
linux/servers/: http_server.cpp  http_server.h  socket_server.cpp  socket_server.h
src/common/: constants.h  exception_handler.hpp  socket.cpp  socket.h  utils.cpp  utils.h
src/common/api/: json_helper.h  request.h  response.h  session_factory.h  session_id.h
src/common/api/requests/: id2string_request.cpp  id2string_request.h  login_request.cpp  login_request.h  login_status_request.cpp  login_status_request.h
src/common/api/response/: id2string_response.cpp  id2string_response.h  (+4 more)
src/common/eos/: eos_anticheat_types.h  eos_api.h  eos_general_types.h  eos_login_types.h  eos_platform_types.h
src/common/protocol/: packet.h  packet_codec.cpp  packet_codec.h
src/linux/: CMakeLists.txt  bootstrapper.cpp  bootstrapper.h  dllmain.cpp
src/linux/api/: api_handler_registry.h  id2string_handler.cpp  id2string_handler.h  login_handler.cpp  login_handler.h  login_status_handler.cpp  login_status_handler.h
src/linux/eos/: eos.cpp  eos.h  eos_anticheat.cpp  eos_anticheat.h  eos_connect.cpp  eos_connect.h  eos_logger.h  eos_platform.cpp  eos_platform.h  eos_utils.h
src/linux/forwarding/: forwarder.h
src/linux/handlers/: handler_registry.h
src/linux/handlers/anticheat/: begin_session_handler.cpp  begin_session_handler.h  end_session_handler.cpp  end_session_handler.h  receive_message_handler.cpp  receive_message_handler.h
src/linux/handlers/common/: handshake_packet_handler.cpp  handshake_packet_handler.h  initialize_eos_handler.cpp  initialize_eos_handler.h
src/linux/handlers/notification/: notify_message_to_server_handler.cpp  notify_message_to_server_handler.h
src/linux/handlers/platform/: create_platform_handler.cpp  create_platform_handler.h
src/linux/servers/: http_server.cpp  http_server.h  socket_server.cpp  socket_server.h  websocket_server.cpp  websocket_server.h
src/win/: CMakeLists.txt  client.cpp  client.h  client_packet_handler.cpp  client_packet_handler.h  client_packet_processor.cpp  client_packet_processor.h  dllmain.cpp  emulator_client.cpp  emulator_client.h  emulator_initializer.cpp  emulator_initializer.h
src/win/eos_impl/: eos_anticheat_impl.cpp  eos_general_impl.cpp  eos_notification_impl.cpp  eos_platform_impl.cpp  eos_session_impl.cpp
src/win/handler/: handler_registry.cpp  handler_registry.h  packet_handler.h
src/win/handler/handlers/: client_packet_handler.cpp  client_packet_handler.h
src/win/sock/: packet_sender.cpp  packet_sender.h  sock_client.cpp  sock_client.h  websocket_client.cpp  websocket_client.h
win/: CMakeLists.txt  client.cpp  client.h  client_packet_handler.cpp  client_packet_processor.cpp  client_packet_processor.h  dllmain.cpp  eos.cpp  exports.def
win/eos/: eos.cpp  eos.h  eos_anticheat_impl.cpp  eos_api.h  eos_general.cpp  eos_general_impl.cpp  eos_notification.cpp  eos_notification_impl.cpp  eos_platform.cpp  eos_platform_impl.cpp  eos_session.cpp  eos_session_impl.cpp
(+11 files in other folders)
